{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 116,
  "lineage": "6a8cf7a7-bf51-b199-ab7e-843973f215ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e69787e97e7e4ea",
            "arn": "arn:aws:ec2:us-east-1:194722441708:elastic-ip/eipalloc-08e69787e97e7e4ea",
            "association_id": "eipassoc-03b130da366fa02a6",
            "domain": "vpc",
            "id": "eipalloc-08e69787e97e7e4ea",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0253819bb168eb446",
            "private_dns": "ip-10-0-1-56.ec2.internal",
            "private_ip": "10.0.1.56",
            "public_dns": "ec2-3-230-28-204.compute-1.amazonaws.com",
            "public_ip": "3.230.28.204",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-nat-eip"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05ec1e5f7cfe5ef59",
            "arn": "arn:aws:ec2:us-east-1:194722441708:instance/i-04eae1a6edf43b13f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "asterra-ec2-profile",
            "id": "i-04eae1a6edf43b13f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "asterra-assignment-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0359b119476bb088e",
            "private_dns": "ip-10-0-10-221.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:194722441708:key/001e6b75-e310-44ae-9e21-ca1609aba3d5",
                "throughput": 125,
                "volume_id": "vol-01fe1266d4d5014db",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb9914b2756dfd0a",
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-private-server",
              "Purpose": "GIS Processing",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-private-server",
              "Purpose": "GIS Processing",
              "Type": "Private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063993e483a61c7af"
            ]
          },
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_parameter_group.postgres_postgis",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_iam_role.rds_monitoring",
            "aws_key_pair.main",
            "aws_s3_bucket.data_ingestion",
            "aws_secretsmanager_secret.db_credentials",
            "aws_security_group.database_sg",
            "aws_security_group.private_sg",
            "aws_security_group.public_sg",
            "aws_subnet.database",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows_workspace",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0345f44fe05216fc4",
            "arn": "arn:aws:ec2:us-east-1:194722441708:instance/i-057a0a33f5d9ac655",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-057a0a33f5d9ac655",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "asterra-assignment-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-029c53908d1cb780d",
            "private_dns": "ip-10-0-1-158.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.158",
            "public_dns": "ec2-54-242-135-238.compute-1.amazonaws.com",
            "public_ip": "54.242.135.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:194722441708:key/001e6b75-e310-44ae-9e21-ca1609aba3d5",
                "throughput": 125,
                "volume_id": "vol-0832c58aea57dcb9c",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0390306e589945532",
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-windows-workspace",
              "Purpose": "Development Workspace",
              "Type": "Development"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-windows-workspace",
              "Purpose": "Development Workspace",
              "Type": "Development"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0712b8833e5744074",
              "sg-0a91ac97c8659f7a1"
            ]
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.public_sg",
            "aws_security_group.rdp_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.windows_server",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722441708:internet-gateway/igw-0634cf98a0c9d79a2",
            "id": "igw-0634cf98a0c9d79a2",
            "owner_id": "194722441708",
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-main-igw"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-main-igw"
            },
            "vpc_id": "vpc-0848ba8a968a279de"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:194722441708:loadbalancer/app/asterra-public-alb/8d182187172c36dd",
            "arn_suffix": "app/asterra-public-alb/8d182187172c36dd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "asterra-public-alb-391303536.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:194722441708:loadbalancer/app/asterra-public-alb/8d182187172c36dd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "asterra-public-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08a478c88f7ae323c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0390306e589945532"
              },
              {
                "subnet_id": "subnet-0cb25c7185de8aed4"
              }
            ],
            "subnets": [
              "subnet-0390306e589945532",
              "subnet-0cb25c7185de8aed4"
            ],
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-public-alb"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-public-alb"
            },
            "vpc_id": "vpc-0848ba8a968a279de",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:194722441708:listener/app/asterra-public-alb/8d182187172c36dd/6620a241f5e6917b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:194722441708:targetgroup/asterra-public-tg/b608ac7e87c9675a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:194722441708:listener/app/asterra-public-alb/8d182187172c36dd/6620a241f5e6917b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:194722441708:loadbalancer/app/asterra-public-alb/8d182187172c36dd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-public-listener"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-public-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.public_alb",
            "aws_lb_target_group.public_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "public_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:194722441708:targetgroup/asterra-public-tg/b608ac7e87c9675a",
            "arn_suffix": "targetgroup/asterra-public-tg/b608ac7e87c9675a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:194722441708:targetgroup/asterra-public-tg/b608ac7e87c9675a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:194722441708:loadbalancer/app/asterra-public-alb/8d182187172c36dd"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "asterra-public-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-public-tg"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-public-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0848ba8a968a279de"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e69787e97e7e4ea",
            "association_id": "eipassoc-03b130da366fa02a6",
            "connectivity_type": "public",
            "id": "nat-0ab6437bcffe4ceb8",
            "network_interface_id": "eni-0253819bb168eb446",
            "private_ip": "10.0.1.56",
            "public_ip": "3.230.28.204",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0390306e589945532",
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-nat-gateway"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722441708:route-table/rtb-00b6ab47dc4a43eb2",
            "id": "rtb-00b6ab47dc4a43eb2",
            "owner_id": "194722441708",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-database-rt",
              "Type": "Database"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-database-rt",
              "Type": "Database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0848ba8a968a279de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722441708:route-table/rtb-060f9a8626dc9cf1e",
            "id": "rtb-060f9a8626dc9cf1e",
            "owner_id": "194722441708",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ab6437bcffe4ceb8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-private-rt",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-private-rt",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0848ba8a968a279de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722441708:route-table/rtb-05732f96fa244bc89",
            "id": "rtb-05732f96fa244bc89",
            "owner_id": "194722441708",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0634cf98a0c9d79a2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-public-rt",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-public-rt",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0848ba8a968a279de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0983b44c888c03883",
            "route_table_id": "rtb-00b6ab47dc4a43eb2",
            "subnet_id": "subnet-01d02b1899693bf5d"
          },
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3a57aca26a9ff6a",
            "route_table_id": "rtb-00b6ab47dc4a43eb2",
            "subnet_id": "subnet-0db3601129ddef119"
          },
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbda421f92495b35",
            "route_table_id": "rtb-060f9a8626dc9cf1e",
            "subnet_id": "subnet-0bb9914b2756dfd0a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdc171e0a3e9d363",
            "route_table_id": "rtb-060f9a8626dc9cf1e",
            "subnet_id": "subnet-0e2125ed973801e0d"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3dc903b4500f574",
            "route_table_id": "rtb-05732f96fa244bc89",
            "subnet_id": "subnet-0390306e589945532"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0100e0321c243edb7",
            "route_table_id": "rtb-05732f96fa244bc89",
            "subnet_id": "subnet-0cb25c7185de8aed4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722441708:security-group/sg-08a478c88f7ae323c",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a478c88f7ae323c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "asterra-alb-sg",
            "name_prefix": "",
            "owner_id": "194722441708",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-alb-sg",
              "Type": "LoadBalancer"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-alb-sg",
              "Type": "LoadBalancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0848ba8a968a279de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722441708:security-group/sg-0ba78f4aec837247c",
            "description": "Security group for PostgreSQL database",
            "egress": [],
            "id": "sg-0ba78f4aec837247c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL from VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from Private Services",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-063993e483a61c7af"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from Public Services",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a91ac97c8659f7a1"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "asterra-database-sg",
            "name_prefix": "",
            "owner_id": "194722441708",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-database-sg",
              "Type": "Database"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-database-sg",
              "Type": "Database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0848ba8a968a279de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private_sg",
            "aws_security_group.public_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722441708:security-group/sg-063993e483a61c7af",
            "description": "Security group for private services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063993e483a61c7af",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Internal VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "SSH from Public",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "From Public Services",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a91ac97c8659f7a1"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "asterra-private-sg",
            "name_prefix": "",
            "owner_id": "194722441708",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-private-sg",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-private-sg",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0848ba8a968a279de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722441708:security-group/sg-0a91ac97c8659f7a1",
            "description": "Security group for public-facing services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a91ac97c8659f7a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Custom App Port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "asterra-public-sg",
            "name_prefix": "",
            "owner_id": "194722441708",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-public-sg",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-public-sg",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0848ba8a968a279de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rdp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722441708:security-group/sg-0712b8833e5744074",
            "description": "Security group for RDP access to development workspace",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0712b8833e5744074",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "asterra-rdp-sg",
            "name_prefix": "",
            "owner_id": "194722441708",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-rdp-sg",
              "Type": "RDP"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-rdp-sg",
              "Type": "RDP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0848ba8a968a279de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722441708:subnet/subnet-01d02b1899693bf5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d02b1899693bf5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194722441708",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-database-subnet-1",
              "Type": "Database"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-database-subnet-1",
              "Type": "Database"
            },
            "vpc_id": "vpc-0848ba8a968a279de"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722441708:subnet/subnet-0db3601129ddef119",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db3601129ddef119",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194722441708",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-database-subnet-2",
              "Type": "Database"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-database-subnet-2",
              "Type": "Database"
            },
            "vpc_id": "vpc-0848ba8a968a279de"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722441708:subnet/subnet-0bb9914b2756dfd0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb9914b2756dfd0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194722441708",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-private-subnet-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-0848ba8a968a279de"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722441708:subnet/subnet-0e2125ed973801e0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2125ed973801e0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194722441708",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-private-subnet-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-0848ba8a968a279de"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722441708:subnet/subnet-0390306e589945532",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0390306e589945532",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194722441708",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-public-subnet-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-0848ba8a968a279de"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722441708:subnet/subnet-0cb25c7185de8aed4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb25c7185de8aed4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194722441708",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-public-subnet-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-0848ba8a968a279de"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722441708:vpc/vpc-0848ba8a968a279de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0345ee89fc7f5dd82",
            "default_route_table_id": "rtb-0bcdac470b6abdb1d",
            "default_security_group_id": "sg-043e7d30451700404",
            "dhcp_options_id": "dopt-02af136091458e6ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0848ba8a968a279de",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bcdac470b6abdb1d",
            "owner_id": "194722441708",
            "tags": {
              "Environment": "assignment",
              "Name": "asterra-main-vpc",
              "Project": "asterra-devops"
            },
            "tags_all": {
              "Environment": "assignment",
              "Name": "asterra-main-vpc",
              "Project": "asterra-devops"
            }
          }
        }
      ]
    }
  ]
}